WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149119
WebKitTestRunner declarative language setting is broken for iOS
https://bugs.webkit.org/show_bug.cgi?id=149119
Summary
WebKitTestRunner declarative language setting is broken for iOS
Said Abou-Hallawa
Reported
2015-09-14 10:49:13 PDT
These tests are broken on iOS: fast/text/international/system-language/han-quotes.html fast/text/international/system-language/declarative-langauge.html
Attachments
Patch
(3.39 KB, patch)
2015-09-14 18:18 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-09-14 10:53:37 PDT
<
rdar://problem/22686606
>
Myles C. Maxfield
Comment 2
2015-09-14 18:18:48 PDT
Created
attachment 261157
[details]
Patch
Myles C. Maxfield
Comment 3
2015-09-14 18:19:13 PDT
Comment on
attachment 261157
[details]
Patch This is a follow up patch; i'm going to commit it unreviewed.
Myles C. Maxfield
Comment 4
2015-09-14 18:22:07 PDT
Committed
r189768
: <
http://trac.webkit.org/changeset/189768
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug