WebKitTestRunner declarative language setting is broken for iOS https://bugs.webkit.org/show_bug.cgi?id=149119

Unreviewed.

Tools:

In all of the patches on webkit.org/b/189669, my patch to get this working on iOS was
lost in the final version which got committed. This simply implements the existing
OS X behavior on iOS.

* WebKitTestRunner/InjectedBundle/ios/InjectedBundleIOS.mm:
(WTR::InjectedBundle::platformInitialize):

LayoutTests:

* platform/ios-simulator/TestExpectations:

Canonical link: https://commits.webkit.org/167251@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189768 268f45cc-cd09-0410-ab3c-d52691b4dbfc